Fix dark mode.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,35 +19,43 @@ $myTakeWeb-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$myTakeWeb-theme: mat.define-light-theme((
-  color: (
-    primary: $myTakeWeb-primary,
-    accent: $myTakeWeb-accent,
-    warn: $myTakeWeb-warn,
-  )
-));
+$myTakeWeb-theme: mat.define-light-theme(
+	(
+		color: (
+			primary: $myTakeWeb-primary,
+			accent: $myTakeWeb-accent,
+			warn: $myTakeWeb-warn,
+		),
+	)
+);
 
-$myTakeWeb-dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $myTakeWeb-primary,
-    accent: $myTakeWeb-accent,
-    warn: $myTakeWeb-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0,
-));
+$myTakeWeb-dark-theme: mat.define-dark-theme(
+	(
+		color: (
+			primary: $myTakeWeb-primary,
+			accent: $myTakeWeb-accent,
+			warn: $myTakeWeb-warn,
+		),
+		typography: mat.define-typography-config(),
+		density: 0,
+	)
+);
 
 // Apply the dark theme by default
-@include mat.core-theme($myTakeWeb-dark-theme);
-@include mat.button-theme($myTakeWeb-dark-theme);
+@include mat.all-component-themes($myTakeWeb-dark-theme);
 
 // Apply the light theme only when the user prefers light themes.
 @media (prefers-color-scheme: light) {
- // Use the `-color` mixins to only apply color styles without reapplying the same
- // typography and density styles.
- @include mat.core-color($myTakeWeb-theme);
- @include mat.button-color($myTakeWeb-theme);
+	// Use the `-color` mixins to only apply color styles without reapplying the same
+	// typography and density styles.
+	@include mat.all-component-themes($myTakeWeb-theme);
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+	height: 100%;
+}
+body {
+	margin: 0;
+	font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
